--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Temi Oke <temi@hey.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+pre-commit = "^2.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
